@@ -3,6 +3,7 @@ package edu.asu.ser516.metrics;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.List;
 
 public class CsvMetricExporter {
@@ -12,9 +13,29 @@ public class CsvMetricExporter {
 
     public void export(List<MetricRow> rows, Path outDir) throws IOException {
         Files.createDirectories(outDir);
-
         Path outFile = outDir.resolve(FILE_NAME);
 
-        Files.writeString(outFile, HEADER + System.lineSeparator());
+        List<String> lines = new ArrayList<>();
+        lines.add(HEADER);
+
+        for (MetricRow r : rows) {
+            lines.add(toCsvLine(r));
+        }
+
+        Files.write(outFile, lines);
+    }
+
+    private String toCsvLine(MetricRow r) {
+        String packageName = r.getPackageName() == null ? "" : r.getPackageName();
+        String filePath = r.getFilePath() == null ? "" : r.getFilePath();
+
+        return String.join(",",
+                r.getMetricType().name(),
+                r.getScope().name(),
+                r.getEntity(),
+                String.valueOf(r.getValue()),
+                packageName,
+                filePath
+        );
     }
 }
